--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
-# ローカル開発用 DockerCompose
 version: '3'
 
 services:
   app:
     container_name: "app"
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:
+      - ".:/go/src/github.com/grandcolline/todo-list-api"
     ports:
         - "8080:8080"
-    privileged: true
-    ulimits:
-      nproc: 65536
-      nofile:
-        soft: 20000
-        hard: 40000
     depends_on:
       - db
 
@@ -29,10 +26,14 @@ services:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_USER=user
       - MYSQL_PASSWORD=pass
-    privileged: true
-    ulimits:
-      nproc: 65536
-      nofile:
-        soft: 20000
-        hard: 40000
+  
+#  nginx:
+#    image: "nginx:latest"
+#    container_name: "nginx"
+#    volumes:
+#      - "./docker/nginx/site.conf:/etc/nginx/conf.d/default.conf"
+#    ports:
+#        - "8081:80"
+#    depends_on:
+#      - app
 
