--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,16 @@
-# -----------------------------------
-# DockerComposeFile For Development
-# -----------------------------------
-
-version: '3'
+version: '3.7'
 
 services:
   app:
     container_name: "app"
-    build: 
+    build:
       context: .
-      dockerfile: Dockerfile.dev
+      target: dev
     volumes:
       - ".:/go/src/github.com/grandcolline/todo-list-api"
+      # --- exclude volums ---
+      - /go/src/github.com/grandcolline/todo-list-api/.docker/
+      - /go/src/github.com/grandcolline/todo-list-api/.git/
     ports:
         - "8080:8080"
-    depends_on:
-      - db
-
-  db:
-    image: "mysql:5.7"
-    container_name: "db"
-    volumes:
-      - "./.docker/db/data:/var/lib/mysql"
-      - "./.docker/db/conf:/etc/mysql/conf.d"
-    ports:
-        - "3306:3306"
-    environment:
-      - MYSQL_DATABASE=todo
-      - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_USER=user
-      - MYSQL_PASSWORD=pass
-
-#  nginx:
-#    image: "nginx:latest"
-#    container_name: "nginx"
-#    volumes:
-#      - "./docker/nginx/site.conf:/etc/nginx/conf.d/default.conf"
-#    ports:
-#        - "8081:80"
-#    depends_on:
-#      - app
 
